# Robust-View-Graph-SLAM

./: .gitignore  CMakeLists.txt  Makefile  Multiple_view_geometry.txt~  README.md  old_makefile  pwg_optimiser.cpp~  pwg_optimiser.h~
Debug/: makefile  sources.mk
Debug/mex/: subdir.mk
Debug/src/: subdir.mk
SuiteSparse/RBio/: RBraw.mexa64  RBread.mexa64  RBtype.mexa64  RBwrite.mexa64
SuiteSparse/SSMULT/: ssmult.mexa64
SuiteSparse/UFcollection/: UFfull_write.mexa64
SuiteSparse/UFconfig/: UFconfig.mk
SuiteSparse/metis-4.0/: graphchk  kmetis  mesh2dual  mesh2nodal  oemetis  onmetis  partdmesh  partnmesh  pmetis
cmake/: FindMatlabMex.cmake  FindPARMETIS.cmake  FindVLFeat.cmake  Findcvsba.cmake
conf/: AKAZE.ini  BRIEF.ini  FAST.ini  KAZE.ini  ORB.ini  SIFT.ini  SURF.ini  vgSLAM.ini
doxygen/: doxygen.cfg
doxygen/html/: 5point_8h_source.html  Exception_8h.html  Exception_8h__dep__incl.map  Exception_8h__dep__incl.md5  Exception_8h__incl.map  Exception_8h__incl.md5  Exception_8h_source.html  GraphOptimiser_8h_source.html  Image_8h_source.html  InvalidOperationException_8h.html  InvalidOperationException_8h__incl.map  InvalidOperationException_8h__incl.md5  InvalidOperationException_8h_source.html  Mblock_8h_source.html  NullPointerException_8h.html  NullPointerException_8h__incl.map  NullPointerException_8h__incl.md5  NullPointerException_8h_source.html  Polynomial_8h_source.html  PwgOptimiser_8h.html  PwgOptimiser_8h__incl.map  PwgOptimiser_8h__incl.md5  (+88 more)
graph/: CMakeLists.txt
graph/conf/: BRISK.ini  FAST.ini  FREAK.ini  GFTT.ini  vgSLAM.ini
graph/diagrams/: ClassDiagramVgSLAM.uml  SequenceDiagramVgSLAM.zargo.uml
graph/include/: Sampling.h  slamtype.h  threaddescriptor.h  threadfeature.h  threadmatching.h  vgslambuffer.h  vgslammodule.h  vgslamthread.h
graph/src/: main.cpp  threaddescriptor.cpp  threadfeature.cpp  threadmatching.cpp  vgslammodule.cpp
include/: 5point.h  Exception.h  GraphOptimiser.h  PwgOptimiser.h  RecoverMoments.h  Tracker.h  cpps.h  epnp.h  featureselector.h  icubs.h  mythread.h  opencvs.h
matlab/: README  batch_constraints_from_kinematics_new.m  batch_demo.m  batch_lines.m  build_camera_graph.m  check_data.m  config_robot.m  demo_ceres.m  demo_entropy_mutual_info.m  demo_graph_optimiser.m  demo_pwg_optimiser.m  demo_sketch_rnls.m  demo_walking.m  demo_walking_2m.m  heicub_config.m  icub_config.m  initialise_graph_constraints.m  optimise_pwg_constraints.m  r1_config.m  robot_demo.m  vision_demo.m
metis-4.0/: Makefile.in  graphchk  kmetis  mesh2dual  mesh2nodal  oemetis  onmetis  partdmesh  partnmesh  pmetis
mex/: coding.m  compile_GraphOptimiser.m  compile_PwgOptimiser.m  compile_RecoverMoments.m  derivative_R2w_test.m  getversion.m  mex_SCC.cpp~  mex_bucketing.cpp  mex_compute_gate_graph.cpp  mex_compute_gate_inverse_depth_Mviews.cpp  mex_compute_gate_inverse_depth_Mviews.cpp~  mex_compute_gate_inverse_depth_Mviews.mexa64  mex_constraints_addition_inverse_depth_Mviews.cpp  mex_constraints_addition_inverse_depth_Mviews.mexa64  mex_generate_constraints_info_Mviews.cpp  mex_generate_constraints_info_Mviews.mexa64  mex_kdeSample.cpp~  mex_observation_model.cpp~  mex_observation_model_inverse_depth.cpp  mex_observation_model_inverse_depth.mexa64  mex_observation_model_inverse_depth_Mviews.cpp  mex_observation_model_inverse_depth_Mviews.mexa64  mex_observation_model_jacobian.cpp  mex_observation_model_jacobian.cpp~  mex_observation_model_jacobian.mexa64  mex_observation_model_jacobian_inverse_depth.cpp  mex_observation_model_jacobian_inverse_depth.mexa64  mex_observation_model_jacobian_inverse_depth_Mviews.cpp  mex_observation_model_jacobian_inverse_depth_Mviews.mexa64  mex_optimise_constraints_Mviews.cpp  mex_recover_moments.cpp  mex_recover_moments.cpp~  mex_recover_second_moments.cpp~  mex_rotation_averaging.cpp~  mex_sample_buckets.cpp  mex_solve_translation.cpp~  mex_update_info_matrix_Mviews.cpp  mex_update_info_matrix_Mviews.mexa64  spinv.mexa64  test.m
notes/: BA_using_ceres_matlab.txt  Learning_vision_code  Multiple_view_geometry.txt  README.txt  cholmod_examples  graph_search_algorithms.txt  kernel_density.txt  notes  spanning_tree_resoureces.txt  sparse_blocks.txt
old_makefiles/: CMakeLists.txt  Makefile2
optimise/: CMakeLists.txt
optimise/dev/: CMakeLists.txt  Makefile  test.cpp
optimise/include/: GraphOptimiser.h  Image.h  InvalidOperationException.h  PwgOptimiser.h  eigens.h  epnp.h  featureselector.h  opencvs.h  yarps.h
optimise/include/imageviewer/: ImageViewer.h
optimise/include/matlab/: cvstCG_ComputeMetric.h  libmatlbmx.mlib  libmwboxfilter.h  libmwboxfilter3.h  libmwbwdistEDTFT.h  libmwbwdistEDTFT_tbb.h  libmwbwdistEDT_tbb.h  libmwbwlookup.h  libmwbwpackc.h  libmwbwpackctbb.h  libmwddist.h  libmwedgethinning_tbb.h  libmwgrayxform.h  libmwgrayxform_tbb.h  libmwimfilter.h  libmwimlincomb_tbb.h  libmwimreconstruct.h  libmwint8touint8.h  libmwintluttbb.h  libmwippfilter.h  libmwippgeotrans.h  libmwmorphop_flat.h  libmwmorphop_flat_tbb.h  libmwmorphop_ipp.h  libmwmorphop_packed.h  libmwordfilt2.h  libmwuint16toint16.h
optimise/include/matlab/ToAsyncQueueTgtAppSvc/: ToAsyncQueueTgtAppSvc.hpp
optimise/include/matlab/sl_iofile/: ExcelReaderCAPI.h
optimise/src/: PwgOptimiser.cpp  VLFeat.cpp  calibrated_fivepoint_helper.c  featureselector.cpp  main.cpp
scratch/: FeaturesMex.cpp  averaging.cpp  averaging.h  common.h  demo.m  graph.cpp  graph.h  libs.h  make.m  mfas.h  pwg.h  trans_solver (copy).cpp  trans_solver.cpp
src/: 5point.cbp  5point.cpp  GraphOptimiser.cpp  PwgOptimiser.cpp  PwgOptimiser.h  RecoverMoments.cpp  Tracker.cpp  VLFeat.cpp  featureselector.cpp  graph.cpp~  graph.h~  kde.cpp~  kde.hpp~  l1decode_pd.txt~  lena.ppm  libs.h~  main.cpp  minimum_feedback_arc_set.cpp~  mythread.cpp  trans_solver.cc~  trans_solver.cpp~  trans_solver.h~
vlfeat/: Makefile
working_20150526_with_Invalid_read_of_size 8_error_in_compute_spinv/: GraphOptimiser.h  Makefile  NullPointerException.h  PwgOptimiser  PwgOptimiser.cpp  PwgOptimiser.h  RecoverMoments.cpp  RecoverMoments.h  Valgrind_report  main.cpp
(+1120 files in other folders)
